Fill gaps in the binary before flashing

--- a/boards/openmote/Makefile
+++ b/boards/openmote/Makefile
@@ -14,6 +14,8 @@ include ../Makefile.common
 
 
 flash: target/$(TARGET)/release/openmote.bin
+	@echo "Gap-fill: target/$(TARGET)/release/openmote.bin"
+	arm-none-eabi-objcopy -O binary --gap-fill 0xff target/$(TARGET)/release/openmote.elf target/$(TARGET)/release/openmote.bin
 	@echo "Flashing target/$(TARGET)/release/openmote.bin"
 	python $(BSL_BASE)/cc2538-bsl.py -e -w -v -a 0x00200000 -p $(PORT) --bootloader-invert-lines target/$(TARGET)/release/openmote.bin
 
