Created new module that will transmit to uart in a blocking manner

--- a/boards/nordic/nrf52dk_base/Cargo.toml
+++ b/boards/nordic/nrf52dk_base/Cargo.toml
@@ -10,3 +10,4 @@ capsules = { path = "../../../capsules" }
 kernel = { path = "../../../kernel" }
 nrf52 = { path = "../../../chips/nrf52" }
 nrf5x = { path = "../../../chips/nrf5x" }
+futures = { version = "0.1", default-features = false }
